[workspace]
members = [
    "libs/*"
]
resolver = "2"

[profile.release]
lto = true

[workspace.dependencies]
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
anyhow = "1.0.82"
base64 = "0.13.0"
bincode = "1.3.3"
borsh = "0.9.3"
clap = "2.34.0"
marinade-solana-common = { path = "libs/marinade-solana-common" }
log = "0.4.21"
marinade-finance = { git = "https://github.com/marinade-finance/liquid-staking-program.git", branch = "anchor-0.29" }
once_cell = "1.19.0"
solana-clap-utils = "1.17.22"
solana-cli-config = "1.17.22"
solana-client = "1.17.22"
solana-program = "1.17.22"
solana-remote-wallet = "1.17.22"
solana-sdk = "1.17.22"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
thiserror = "1.0.58"
