[package]
name = "marinade-client-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.14.18"
once_cell = "1.8.0"
thiserror = "1.0.30"
anyhow = "1.0.71"
bincode = "1.3.3"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account  = { version = "1.1.3", features = ["no-entrypoint"] }
log = "0.4.18"
solana-client = "1.14.18"
marinade-finance = { git = "https://github.com/marinade-finance/liquid-staking-program.git", branch = "anchor-0.27" }
dynsigner = { path = "../dynsigner" }
anchor-lang = "0.27.0"
anchor-client = "0.27.0"
borsh = "0.9.3"