[package]
name = "marinade-client-rs"
version = "1.0.0"
edition = "2021"

[dependencies]
anchor-client = { workspace = true }
anchor-lang = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
marinade-solana-common = {workspace = true }
log = { workspace = true }
marinade-finance = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }
thiserror = { workspace = true }
