[package]
name = "marinade-common-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
marinade-solana-common = { workspace = true }
solana-clap-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-remote-wallet = { workspace = true }
solana-sdk = { workspace = true }
