[package]
name = "marinade-transactions"
version = "1.0.0"
edition = "2021"

[dependencies]
anchor-client = { workspace = true }
anyhow = { workspace = true }
base64 = {workspace = true }
bincode = {workspace = true }
borsh = { workspace = true }
log = { workspace = true }
once_cell = {workspace = true }
solana-client = {workspace = true }
solana-sdk = { workspace = true }
thiserror = {workspace = true }
