[package]
name = "marinade-transaction-utils"
version = "1.0.0"
edition = "2021"

[dependencies]
solana-sdk = "1.14.18"
once_cell = "1.8.0"
thiserror = "1.0.30"
anyhow = "1.0.71"
bincode = "1.3.3"
log = "0.4.18"
solana-client = "1.14.18"
anchor-lang = "0.27.0"
anchor-client = "0.27.0"
borsh = "0.9.3"
dynsigner = { path = "../dynsigner" }
